--- a/HotellAdmin/HotellAdmin.csproj
+++ b/HotellAdmin/HotellAdmin.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="RoomData.cs" />
     <EmbeddedResource Include="FormHotellAdmin.resx">
       <DependentUpon>FormHotellAdmin.cs</DependentUpon>
     </EmbeddedResource>
