--- a/.gitignore
+++ b/.gitignore
@@ -222,7 +222,7 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
-
+// benis
 # Visual Studio LightSwitch build output
 **/*.HTMLClient/GeneratedArtifacts
 **/*.DesktopClient/GeneratedArtifacts
