--- a/HotellAdmin/HotellAdmin.csproj
+++ b/HotellAdmin/HotellAdmin.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="HotellAdmin_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
@@ -142,6 +143,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Toppbar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Toppbar1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
