Adda colorblind mode, lagrede instillinger og andre ting
Adda colorblind mode, viser nå blå hvis checkboxen er på
Adda brukerlagrede instillinger. Informasjon om vinduets størrelse, posisjon og colorblindmode blir lagret på PCen og den informasjonen er hentet på oppstart av programmet.
Room labelsa viser nå om de er okkupert eller feil romtype

--- a/HotellAdmin/HotellAdmin.csproj
+++ b/HotellAdmin/HotellAdmin.csproj
@@ -112,6 +112,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
   <ItemGroup>
