Adda login popup vindu

--- a/HotellAdmin/App.config
+++ b/HotellAdmin/App.config
@@ -19,6 +19,18 @@
             <setting name="ColorBlind" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="RememberedUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="RememberUsername" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="PopupSize" serializeAs="String">
+                <value>400, 400</value>
+            </setting>
+            <setting name="PopupLocation" serializeAs="String">
+                <value>50, 50</value>
+            </setting>
         </HotellAdmin.Properties.Settings>
     </userSettings>
 </configuration>
