--- a/HotellAdmin/HotellAdmin.csproj
+++ b/HotellAdmin/HotellAdmin.csproj
@@ -84,6 +84,12 @@
     <Compile Include="FormHotellAdmin.Designer.cs">
       <DependentUpon>FormHotellAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginWindow.Designer.cs">
+      <DependentUpon>LoginWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Order.cs" />
     <Compile Include="OrderData.cs" />
     <Compile Include="Program.cs" />
@@ -92,6 +98,9 @@
     <Compile Include="RoomData.cs" />
     <EmbeddedResource Include="FormHotellAdmin.resx">
       <DependentUpon>FormHotellAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginWindow.resx">
+      <DependentUpon>LoginWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
