--- a/HotellAdmin/HotellAdmin.csproj
+++ b/HotellAdmin/HotellAdmin.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <Compile Include="Booking.cs" />
     <Compile Include="BookingData.cs" />
+    <Compile Include="DatabaseErrorWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DatabaseErrorWindow.Designer.cs">
+      <DependentUpon>DatabaseErrorWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="FormHotellAdmin.cs">
       <SubType>Form</SubType>
@@ -96,6 +102,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="RoomData.cs" />
+    <EmbeddedResource Include="DatabaseErrorWindow.resx">
+      <DependentUpon>DatabaseErrorWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormHotellAdmin.resx">
       <DependentUpon>FormHotellAdmin.cs</DependentUpon>
     </EmbeddedResource>
