fjerna offline mode

--- a/HotellAdmin/App.config
+++ b/HotellAdmin/App.config
@@ -31,6 +31,9 @@
             <setting name="PopupLocation" serializeAs="String">
                 <value>50, 50</value>
             </setting>
+            <setting name="AutoSyncXML" serializeAs="String">
+                <value>True</value>
+            </setting>
         </HotellAdmin.Properties.Settings>
     </userSettings>
 </configuration>
