--- a/HotellAdmin/Properties/Settings.settings
+++ b/HotellAdmin/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="PopupLocation" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">50, 50</Value>
     </Setting>
+    <Setting Name="AutoSyncXML" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
